--- a/index.html
+++ b/index.html
@@ -1,202 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-			integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-			crossorigin="anonymous"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Dosis"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="css/main.css" />
-		<title>Roman Nosov| Chemist and Frontend Beginner</title>
-	</head>
-	<body>
-		<!-- Header -->
-		<header id="header-home">
-			<div class="container">
-				<nav id="main-nav">
-					<img src="/dist/img/logo.png" alt="My Portfolio" id="logo" />
-					<ul>
-						<li><a href="index.html" class="current">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="work.html">Work</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
-				<div class="header-content">
-					<h1>
-						I Am Roman The
-						<span
-							class="txt-type"
-							data-wait="3000"
-							data-words='["Chemist" ,"Frontend Beginner"]'
-						></span>
-					</h1>
-					<p class="lead">
-						I specialize in design new materials in aero and in programming
-					</p>
-					<a href="work.html" class="btn-light">View My Work</a>
-				</div>
-			</div>
-		</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <script
+      async
+      src="https://cse.google.com/cse.js?cx=99a825f07276de958"
+    ></script>
 
-		<!-- Section A: Specialize -->
-		<section id="home-a" class="text-center py-2">
-			<div class="container">
-				<h2 class="section-title">I Specialize In</h2>
-				<div class="bottom-line"></div>
-				<p class="lead">
-					I specialize in creating something new, material or code
-				</p>
-				<div class="specials">
-					<div>
-						<i class="fas fa-road fa-2x"></i>
-						<h3>Choice the way</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
-							molestias repellat quibusdam adipisci quas sed ullam accusantium
-							aliquam numquam quidem.
-						</p>
-					</div>
-					<div>
-						<i class="fas fa-tools fa-2x"></i>
-						<h3>Preparing to work</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
-							molestias repellat quibusdam adipisci quas sed ullam accusantium
-							aliquam numquam quidem.
-						</p>
-					</div>
-					<div>
-						<i class="fas fa-atom fa-2x"></i>
-						<h3>Synthesize the compounds</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
-							molestias repellat quibusdam adipisci quas sed ullam accusantium
-							aliquam numquam quidem.
-						</p>
-					</div>
-					<div>
-						<i class="fas fa-flask fa-2x"></i>
-						<h3>Analise and using</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
-							molestias repellat quibusdam adipisci quas sed ullam accusantium
-							aliquam numquam quidem.
-						</p>
-					</div>
-				</div>
-			</div>
-		</section>
+    <title>Roman Nosov| Chemist and Frontend Beginner</title>
+  </head>
+  <body>
+    <!-- Header -->
+    <header id="header-home">
+      <div class="container">
+        <nav id="main-nav">
+          <img src="/dist/img/logo.png" alt="My Portfolio" id="logo" />
+          <ul>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><div class="gcse-search"></div></li>
+          </ul>
+        </nav>
+        <div class="header-content">
+          <h1>
+            I Am Roman The
+            <span
+              class="txt-type"
+              data-wait="3000"
+              data-words='["Chemist" ,"Frontend Beginner"]'
+            ></span>
+          </h1>
+          <p class="lead">
+            I specialize in design new materials in aero and in programming
+          </p>
+          <a href="work.html" class="btn-light">View My Work</a>
+        </div>
+      </div>
+    </header>
 
-		<!-- Section B: Stats -->
-		<section id="home-b" class="text-center py-2">
-			<div class="stats">
-				<div>
-					<ul>
-						<li><i class="fas fa-capsules fa-3x"></i></li>
-						<li class="stats-title">Compounds</li>
-						<li class="stats-number">>500</li>
-					</ul>
-				</div>
-				<div>
-					<ul>
-						<li><i class="fas fa-dollar-sign fa-3x"></i></li>
-						<li class="stats-title">Grants</li>
-						<li class="stats-number">3</li>
-					</ul>
-				</div>
-				<div>
-					<ul>
-						<li><i class="fas fa-hourglass-start fa-3x"></i></li>
-						<li class="stats-title">Hours Worked</li>
-						<li class="stats-number">3500</li>
-					</ul>
-				</div>
-				<div>
-					<ul>
-						<li><i class="far fa-newspaper fa-3x"></i></li>
-						<li class="stats-title">Published works</li>
-						<li class="stats-number">>20</li>
-					</ul>
-				</div>
-			</div>
-		</section>
+    <!-- Section A: Specialize -->
+    <section id="home-a" class="text-center py-2">
+      <div class="container">
+        <h2 class="section-title">I Specialize In</h2>
+        <div class="bottom-line"></div>
+        <p class="lead">
+          I specialize in creating something new, material or code
+        </p>
+        <div class="specials">
+          <div>
+            <i class="fas fa-road fa-2x"></i>
+            <h3>Choice the way</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+              molestias repellat quibusdam adipisci quas sed ullam accusantium
+              aliquam numquam quidem.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-tools fa-2x"></i>
+            <h3>Preparing to work</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+              molestias repellat quibusdam adipisci quas sed ullam accusantium
+              aliquam numquam quidem.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-atom fa-2x"></i>
+            <h3>Synthesize the compounds</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+              molestias repellat quibusdam adipisci quas sed ullam accusantium
+              aliquam numquam quidem.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-flask fa-2x"></i>
+            <h3>Analise and using</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+              molestias repellat quibusdam adipisci quas sed ullam accusantium
+              aliquam numquam quidem.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<!-- Section C: Process -->
-		<section id="home-c" class="text-center py-2">
-			<div class="container">
-				<h2 class="section-title">My Creative Process</h2>
-				<div class="bottom-line"></div>
-				<p class="lead">
-					All of my UI/UX and design projects are based off of a practiced
-					formula to get the result that I am looking for
-				</p>
-				<div class="process">
-					<div>
-						<i class="fas fa-file-alt fa-4x process-icon my-2">
-							<div class="process-step">1</div>
-						</i>
-						<h3>Discuss The Goal</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-							voluptas laborum repellendus dolorum! Harum, cupiditate.
-						</p>
-					</div>
-					<div>
-						<i class="fas fa-desktop fa-4x process-icon my-2">
-							<div class="process-step">2</div>
-						</i>
-						<h3>Brainstorming</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-							voluptas laborum repellendus dolorum! Harum, cupiditate.
-						</p>
-					</div>
-					<div>
-						<i class="fas fa-object-ungroup fa-4x process-icon my-2">
-							<div class="process-step">3</div>
-						</i>
-						<h3>Synthes planing</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-							voluptas laborum repellendus dolorum! Harum, cupiditate.
-						</p>
-					</div>
-					<div>
-						<i class="fas fa-thumbs-up fa-4x process-icon my-2">
-							<div class="process-step">4</div>
-						</i>
-						<h3>Obtain target compound</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-							voluptas laborum repellendus dolorum! Harum, cupiditate.
-						</p>
-					</div>
-				</div>
-			</div>
-		</section>
+    <!-- Section B: Stats -->
+    <section id="home-b" class="text-center py-2">
+      <div class="stats">
+        <div>
+          <ul>
+            <li><i class="fas fa-capsules fa-3x"></i></li>
+            <li class="stats-title">Compounds</li>
+            <li class="stats-number">>500</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><i class="fas fa-dollar-sign fa-3x"></i></li>
+            <li class="stats-title">Grants</li>
+            <li class="stats-number">3</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><i class="fas fa-hourglass-start fa-3x"></i></li>
+            <li class="stats-title">Hours Worked</li>
+            <li class="stats-number">3500</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><i class="far fa-newspaper fa-3x"></i></li>
+            <li class="stats-title">Published works</li>
+            <li class="stats-number">>20</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-		<!-- Footer -->
-		<footer id="main-footer">
-			<div class="footer-content container">
-				<p>Copyright & copy; 2021. All Rights Reserved</p>
-				<div class="social">
-					<i class="fab fa-twitter"></i>
-					<i class="fab fa-facebook"></i>
-					<i class="fab fa-instagram"></i>
-					<i class="fab fa-linkedin"></i>
-				</div>
-			</div>
-		</footer>
+    <!-- Section C: Process -->
+    <section id="home-c" class="text-center py-2">
+      <div class="container">
+        <h2 class="section-title">My Creative Process</h2>
+        <div class="bottom-line"></div>
+        <p class="lead">
+          All of my UI/UX and design projects are based off of a practiced
+          formula to get the result that I am looking for
+        </p>
+        <div class="process">
+          <div>
+            <i class="fas fa-file-alt fa-4x process-icon my-2">
+              <div class="process-step">1</div>
+            </i>
+            <h3>Discuss The Goal</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+              voluptas laborum repellendus dolorum! Harum, cupiditate.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-desktop fa-4x process-icon my-2">
+              <div class="process-step">2</div>
+            </i>
+            <h3>Brainstorming</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+              voluptas laborum repellendus dolorum! Harum, cupiditate.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-object-ungroup fa-4x process-icon my-2">
+              <div class="process-step">3</div>
+            </i>
+            <h3>Synthes planing</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+              voluptas laborum repellendus dolorum! Harum, cupiditate.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-thumbs-up fa-4x process-icon my-2">
+              <div class="process-step">4</div>
+            </i>
+            <h3>Obtain target compound</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+              voluptas laborum repellendus dolorum! Harum, cupiditate.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<script src="js/typewriter.js"></script>
-	</body>
+    <!-- Footer -->
+    <footer id="main-footer">
+      <div class="footer-content container">
+        <p>Copyright & copy; 2021. All Rights Reserved</p>
+        <div class="social">
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin"></i>
+        </div>
+      </div>
+    </footer>
+
+    <script src="js/typewriter.js"></script>
+  </body>
 </html>
