--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><div class="gcse-search"></div></li>
+            <li><div class="gcse-search">fffff</div></li>
           </ul>
         </nav>
         <div class="header-content">
